# ssbng

./: CLAUDE.md  Makefile  README.md  mise.toml  pyproject.toml  renovate.json
.github/workflows/: check-links.yml  publish-test.yml  publish.yml  release.yml  test.yml
.github/workflows-disabled/: publish.yml  release.yml
dab/: __init__.py  btrfs.py  cli.py  config.py  configloader.py  output.py  ssh.py  status.py  testcli.py
docs/: architecture.md  building-and-testing.md  concepts.md  conventions.md  features.md  installation.md  releasing-and-publishing.md  setup-development-environment.md  usage.md
examples/: basic_usage.py
nbkp/: __init__.py  btrfs.py  check.py  cli.py  configloader.py  net.py  output.py  runner.py  scriptgen.py  status.py  testcli.py  testdata.py
nbkp/config/: __init__.py  loader.py  protocol.py  resolution.py
nbkp/remote/: __init__.py  fabricssh.py  resolution.py  ssh.py
nbkp/sync/: __init__.py  btrfs.py  hardlinks.py  ordering.py  rsync.py  runner.py  ssh.py
nbkp/templates/: backup.sh.j2
nbkp/testkit/: __init__.py  docker.py
nbkp/testkit/dockerbuild/: entrypoint.sh
ssb/: __init__.py  backup.py  btrfs.py  checks.py  cli.py  config.py  configloader.py  encryption.py  model.py  output.py  rsync.py  runner.py  ssh.py  status.py  testcli.py  testdata.py
tests/: __init__.py  conftest.py  test_backup.py  test_btrfs.py  test_check.py  test_checks.py  test_cli.py  test_config.py  test_configloader.py  test_encryption.py  test_model.py  test_rsync.py  test_runner.py  test_scriptgen.py  test_ssh.py  test_status.py  test_sync_ordering.py
tests/integration/: conftest.py  test_btrfs.py  test_chain.py  test_check.py  test_hardlinks.py  test_local_to_local.py  test_local_to_remote.py  test_proxy_jump.py  test_remote_to_local.py  test_remote_to_remote_same_server.py  test_status.py
tests/integration/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
tests/remote/: test_resolution.py  test_ssh.py
tests/sync/: test_btrfs.py  test_hardlinks.py  test_rsync.py  test_runner.py
