[tool.poetry]
name = "ssb"
version = "0.1.0"
description = "Simple Safe Backup - A secure backup solution"
authors = ["Sami Dalouche <sami.dalouche@gmail.com>"]
readme = "README.md"
packages = [{include = "ssb"}]

[tool.poetry.scripts]
ssb = "ssb.cli:main"

[tool.poetry.dependencies]
python = "^3.13"
cryptography = "^46.0.0"
typer = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^26.0.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py314']

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
