[project]
name = "nbkp"
description = "Nomad Backup: A robust backup tool powered by rsync, designed for both local and remote targets—including removable drives and intermittently available backup servers. It optionally leverages btrfs snapshots for incremental backups and encrypted volumes for enhanced security."
authors = [{name = "Sami Dalouche", email = "sami.dalouche@gmail.com"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.24.0,<1.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]
dynamic = ["version"]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry-dynamic-versioning]
enable = true

[project.scripts]
nbkp = "nbkp.cli:main"
nbkp-test = "nbkp.testcli:main"

[tool.poetry]
packages = [{include = "nbkp"}]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^26.0.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
types-pyyaml = "^6.0"
testcontainers = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 79
target-version = ['py314']

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests requiring Docker",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[virtualenvs]
in-project = true
